--- a/staff.html
+++ b/staff.html
@@ -67,6 +67,9 @@
                         <a href="student.html" target="_blank">Student Portal</a>
                     </li>
                     <li>
+                        <a href="troubleshooting.html">Troubleshooting</a>
+                    </li>
+                    <li>
                         <a href="#allTools-blueSection">All Links</a>
                     </li>
                 </ul>
@@ -91,19 +94,19 @@
             <div class="row button-row" id="quickLinksButtonRow">
                 <div>
                     <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/outlook.png" alt="Outlook Email"></button></a>
-					 <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
-					<a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)" title="Illuminate (Assessments)"></button></a>
-					 <a href="https://access.heropowered.com/login/centinelavalley-usd" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
-		</div>
+                    <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
+                    <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)" title="Illuminate (Assessments)"></button></a>
+                    <a href="https://access.heropowered.com/login/centinelavalley-usd" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
+                </div>
                 <div>
-		    <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerSchool Teacher" alt="PowerSchool Teacher"></button></a>
+                    <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerSchool Teacher" alt="PowerSchool Teacher"></button></a>
                     <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
                         target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
                     <a href="https://cvprintcenter.myprintdesk.net/DSF/smartstore.aspx#!/Storefront" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/print-center.png" alt="Print Center"></button></a>
                     <a href="https://helpdesk.centinela.k12.ca.us" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/helpdesk.png" alt="Helpdesk (CV It Department)"></button></a>
-            	    <a href="https://portal.office.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/office365.png" alt="Office 365 Login"></button></a>    
-		</div>
-		
+                    <a href="https://portal.office.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/office365.png" alt="Office 365 Login"></button></a>
+                </div>
+
             </div>
         </section>
 
